WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283480
UserMediaCaptureManagerProxy is not keeping track of capture sources per page
https://bugs.webkit.org/show_bug.cgi?id=283480
Summary
UserMediaCaptureManagerProxy is not keeping track of capture sources per page
youenn fablet
Reported
2024-11-21 04:14:11 PST
UserMediaCaptureManagerProxy is not keeping track of capture sources per page
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2024-11-21 04:15:07 PST
<
rdar://140337737
>
youenn fablet
Comment 2
2024-11-21 04:21:05 PST
https://github.com/WebKit/WebKit/pull/36942
EWS
Comment 3
2024-11-21 08:28:33 PST
Committed
286909@main
(874838b28f41): <
https://commits.webkit.org/286909@main
> Reviewed commits have been landed. Closing PR #36942 and removing active labels.
EWS
Comment 4
2024-12-02 18:52:30 PST
Committed
283286.544@safari-7620-branch
(53bff510cab1): <
https://commits.webkit.org/283286.544@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2350 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug