UserMediaCaptureManagerProxy is not keeping track of capture sources per page rdar://140337737 https://bugs.webkit.org/show_bug.cgi?id=283480

Reviewed by Eric Carlson.

When cloning a capture source, we add it to page sources in UserMediaCaptureManagerProxy.
In most cases though, the capture source clone is the clone itself.
When a capture source clone is removed, we would empty the m_pageSources entry for the page.
And we would stop monitoring orientation.

We fix this by checking in UserMediaCaptureManagerProxy::removeSource whether there is still a proxy that is using the source.
If so, we return early. Otherwise we proceed with updating m_pageSources as currently done.

Manually tested.

* Source/WebKit/UIProcess/Cocoa/UserMediaCaptureManagerProxy.cpp:
(WebKit::UserMediaCaptureManagerProxy::removeSource):

Canonical link: https://commits.webkit.org/286909@main